Fix profiler header gap and SVG properties (https://github.com/woocommerce/woocommerce-admin/pull/2262)
* Fix invalid SVG rules in profile wizard logo

* Fix profile wizard header gap on mobile

--- a/plugins/woocommerce-admin/client/dashboard/profile-wizard/style.scss
+++ b/plugins/woocommerce-admin/client/dashboard/profile-wizard/style.scss
@@ -67,4 +67,8 @@
 	#wpcontent {
 		margin-left: 0;
 	}
+
+	#wpbody {
+		padding-top: 0;
+	}
 }
